Created dashboard layout

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,27 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  height: 100%;
+  margin: 0;
 }
 
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
+#root {
+  height: 100%;
+}
+
 body {
   margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgba(232,240,242,0.6);
 }
 
 code {
@@ -22,5 +30,6 @@ code {
 }
 
 
+@import 'style/pages/index';
 @import 'style/components/index';
 @import 'style/globals';
