--- a/src/style/components/_index.scss
+++ b/src/style/components/_index.scss
@@ -1,2 +1,3 @@
 @import 'style/globals';
-@import 'style/components/progress-bar'
+@import 'style/components/progress-bar';
+@import 'style/components/side-nav';
