--- a/src/style/pages/_dashboard.scss
+++ b/src/style/pages/_dashboard.scss
@@ -35,14 +35,6 @@ $dashboard-content-right-padding: 20%;
   }
 }
 
-.side-nav {
-  width: 15% !important;
-  height: 100% !important;
-  padding: 16px;
-  background: #fff;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-  overflow-y: auto;
-  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+.clickable {
+  cursor: pointer;
 }
