Created basic grid system and added some styling for first dashboard page

--- a/src/style/components/_index.scss
+++ b/src/style/components/_index.scss
@@ -1,3 +1,7 @@
 @import 'style/globals';
 @import 'style/components/progress-bar';
 @import 'style/components/side-nav';
+@import 'style/components/modal';
+@import 'style/components/run-card';
+@import 'style/components/top-nav';
+@import 'style/components/run-card-widget';
