--- a/src/style/pages/_dashboard.scss
+++ b/src/style/pages/_dashboard.scss
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1 !important;
+  margin-top: 64px;
   padding: 48px 12px;
   align-items: center;
 }
