Basic create run modal created

--- a/src/style/components/_index.scss
+++ b/src/style/components/_index.scss
@@ -5,3 +5,5 @@
 @import 'style/components/run-card';
 @import 'style/components/top-nav';
 @import 'style/components/run-card-widget';
+@import 'style/components/file-input';
+@import 'style/components/new-run-template';
