--- a/src/style/_globals.scss
+++ b/src/style/_globals.scss
@@ -3,6 +3,7 @@ $inactive-border-color: #0487D9;
 $inactive-background-color-secondary: #F2F2F2;
 $inactive-background-color-primary: rgba(0,0,0, 0.1);
 $error-color: #F22E52;
+$font-color-primary: #000;
 $font-color-secondary: #3e4246;
 
 $main-theme-color: #1976d2;
