Added loading spinner in the dashboard section

--- a/src/style/components/_index.scss
+++ b/src/style/components/_index.scss
@@ -7,3 +7,4 @@
 @import 'style/components/run-card-widget';
 @import 'style/components/file-input';
 @import 'style/components/new-run-template';
+@import 'style/components/loading-spinner';
