--- a/src/style/components/_index.scss
+++ b/src/style/components/_index.scss
@@ -8,3 +8,4 @@
 @import 'style/components/file-input';
 @import 'style/components/new-run-template';
 @import 'style/components/loading-spinner';
+@import 'style/components/no-runs';
