--- a/src/style/components/_side-nav.scss
+++ b/src/style/components/_side-nav.scss
@@ -21,6 +21,7 @@
     padding-top: 40px;
     padding-bottom: 40px;
     border-bottom: 2px solid $inactive-background-color-secondary;
+    cursor: pointer;
   };
 
   &.user {
