--- a/src/style/_globals.scss
+++ b/src/style/_globals.scss
@@ -11,3 +11,8 @@ $primary-color: #0487D9;
 
 $dashboard-content-left-padding: 15%;
 $dashboard-content-right-padding: 25%;
+
+.content-container {
+  width: 100%;
+  max-width: 960px;
+}
