--- a/src/style/pages/_run.scss
+++ b/src/style/pages/_run.scss
@@ -4,6 +4,11 @@
   width: 100%;
 }
 
+.run-page-container {
+  max-width: 968px;
+  width: 100%;
+}
+
 .table-container {
   height: 646px;
   width: 100%;
