--- a/src/style/components/_top-nav.scss
+++ b/src/style/components/_top-nav.scss
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  position: fixed !important;
+  position: sticky !important;
+  top: 0px;
+  left: 0px;
 }
 
 .buttons-section {
@@ -16,6 +18,14 @@
 .top-nav-toolbar {
   width: 100%;
   box-sizing: border-box;
-  max-width: 1000px;
+  max-width: 996px;
   padding: 0px 12px !important;
+}
+
+.page-title {
+  font-size: 18px !important;
+}
+
+.buttons-section {
+  font-size: 18px !important;
 }
