Force stop runs if confirmed

--- a/src/style/components/_index.scss
+++ b/src/style/components/_index.scss
@@ -9,3 +9,4 @@
 @import 'style/components/new-run-template';
 @import 'style/components/loading-spinner';
 @import 'style/components/no-runs';
+@import 'style/components/confirmation-popup';
