--- a/src/style/pages/_dashboard.scss
+++ b/src/style/pages/_dashboard.scss
@@ -27,3 +27,8 @@
 .clickable {
   cursor: pointer;
 }
+
+.logout-warning-icon {
+  font-size: 118px !important;
+  color: $inactive-background-color-primary;
+}
