--- a/src/style/pages/_dashboard.scss
+++ b/src/style/pages/_dashboard.scss
@@ -32,3 +32,8 @@
   font-size: 118px !important;
   color: $inactive-background-color-primary;
 }
+
+.connection-issues-icon {
+  font-size: 118px !important;
+  color: $inactive-background-color-primary;
+}
