Multiple ux improvements

--- a/src/style/_globals.scss
+++ b/src/style/_globals.scss
@@ -11,6 +11,7 @@ $primary-color: #0487D9;
 
 $dashboard-content-left-padding: 15%;
 $dashboard-content-right-padding: 25%;
+$top-nav-height: 64px;
 
 .content-container {
   width: 100%;
