--- a/src/style/components/_side-nav.scss
+++ b/src/style/components/_side-nav.scss
@@ -1,6 +1,6 @@
 .side-nav {
   width: 100%;
-  height: 100% !important;
+  height: 100%;
   padding: 0px 24px 48px;
   background: #fff;
   display: flex;
@@ -42,13 +42,14 @@
   }
 }
 
-.account-icon {
-  font-size: 140px !important;
-  color: $inactive-background-color-primary !important;
+.profile-picture {
+  width: 120px;
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20%;
+  margin-top: 25%;
+  margin-bottom: 20px;
+  object-fit: cover;
 }
 
 .logout-btn {
