--- a/src/style/components/_top-nav.scss
+++ b/src/style/components/_top-nav.scss
@@ -1,10 +1,19 @@
 .top-nav {
-  display: flex;
-  flex-direction: row;
+  display: flex !important;
+  flex-direction: row !important;
   align-items: center;
+  justify-content: center;
   position: sticky !important;
   top: 0px;
   left: 0px;
+
+  &-back-btn {
+    padding: 6px !important;
+  }
+
+  &-back-icon {
+    font-size: 20px !important;
+  }
 }
 
 .buttons-section {
@@ -19,11 +28,20 @@
   width: 100%;
   box-sizing: border-box;
   max-width: 996px;
-  padding: 0px 12px !important;
+  padding: 0px 12px 0px 0px !important;
+  height: $top-nav-height;
 }
 
 .page-title {
+  display: flex;
+  flex-direction: row;
   font-size: 18px !important;
+  
+  &-results-label {
+    margin-top: auto;
+    font-size: 16px;
+    margin-left: 6px;
+  }
 }
 
 .buttons-section {
