--- a/src/style/pages/_dashboard.scss
+++ b/src/style/pages/_dashboard.scss
@@ -1,7 +1,7 @@
 .dashboard-container {
   display: flex;
   flex-direction: row;
-  height: 100%;
+  height: calc(100% - 64px);
   overflow: hidden;
 }
 
