--- a/src/style/components/_index.scss
+++ b/src/style/components/_index.scss
@@ -10,3 +10,4 @@
 @import 'style/components/loading-spinner';
 @import 'style/components/no-runs';
 @import 'style/components/confirmation-popup';
+@import 'style/components/logo';
